# movies_recommendation

./: README.md  pyproject.toml
backend/: content_recommender.py  main.py  metrics.py
backend/api/: routes_movies.py  routes_ratings.py  routes_rec.py  routes_users.py
backend/services/: schemas.py
data/: exploratory.ipynb  movies_final_df.csv  ratings_final_df.csv
frontend/: app.py  data.py  state.py  utils.py
frontend/app_pages/: agent.py  catalog.py  ratings.py  recommender.py
